# config-compare-yaml

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  NOTICE  README.md  pyproject.toml  setup.py  version.txt
src/config_compare_yaml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/configcompareyaml/: __init__.py  config-sample.yaml  config.yaml  main.py
