[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "config-compare-yaml"
version = "0.0.7"
description = "Compare a global config.yaml file with the developers version to make sure that the keys match during checkin"
authors = [
  { name="Tony Akocs", email="tony.akocs@athertonsoftware.com" },
]
license = {text = "LICENSE"}
readme = "README.md"
keywords = ["config compare", "YAML"]

[project.urls]
Repository = "https://github.com/athertonsoftware/config-compare-yaml"

[tool.setuptools_scm]
write_to= "version.txt"
version_scheme= "release-branch-semver"